<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black"
    tools:context=".UI.Fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/filter"
                android:layout_width="40sp"
                android:layout_height="45sp"
                android:layout_margin="5dp"
                android:src="@drawable/sort" />

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="1sp"
                android:scrollbars="none"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/filter_high"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/btn_filter_shape"
                        android:fontFamily="@font/regular"
                        android:paddingStart="30sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="30sp"
                        android:paddingBottom="10sp"
                        android:text="@string/high"
                        android:textColor="@color/custom_red"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/filter_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_filter_shape"
                        android:fontFamily="@font/regular"
                        android:paddingStart="30sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="30sp"
                        android:paddingBottom="10sp"
                        android:text="@string/medium"
                        android:textColor="@color/custom_yellow"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/filter_low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_filter_shape"
                        android:fontFamily="@font/regular"
                        android:paddingStart="30sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="30sp"
                        android:paddingBottom="10sp"
                        android:text="@string/low"
                        android:textColor="#43A047"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/filter_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/btn_filter_shape"
                        android:fontFamily="@font/regular"
                        android:paddingStart="30sp"
                        android:paddingTop="10sp"
                        android:paddingEnd="30sp"
                        android:paddingBottom="10sp"
                        android:text="@string/favorite"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rccAllNotes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnaddNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="26dp"
            android:backgroundTint="@color/custom_red"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>