<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/custom_black"
        tools:context=".UI.Fragment.CreateFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="10sp"
            android:paddingEnd="10sp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_shape"
                android:fontFamily="@font/regular"
                android:hint="@string/title"
                android:padding="15sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#D2FFFFFF" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editsubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_shape"
                android:fontFamily="@font/regular"
                android:hint="@string/subtitle"
                android:padding="15sp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#D2FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/pgreen"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:background="@drawable/green_dot" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/pyellow"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginStart="20sp"
                    android:background="@drawable/yellow_dot" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/pred"
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:layout_marginStart="20sp"
                    android:background="@drawable/red_dot" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/favorite"
                        android:layout_width="25sp"
                        android:layout_height="25sp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="10sp"
                        android:src="@drawable/unchecked" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editNotes"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="10sp"
                android:background="@drawable/edit_shape"
                android:fontFamily="@font/regular"
                android:gravity="start"
                android:hint="@string/notes"
                android:padding="15sp"
                android:textColor="@color/white"
                android:textColorHint="#D2FFFFFF" />


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSaveNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="26dp"
            android:backgroundTint="#E53935"
            android:src="@drawable/baseline_done_24" />

    </FrameLayout>

</ScrollView>

